--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,23 +3,16 @@ requires = ["setuptools>=61.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "opendeepsearch-langgraph"
+name = "LangGraph_DeepSearch"
 version = "0.1.0"
-description = "A LangGraph-based implementation of OpenDeepSearch"
+description = "A LangGraph-based implementation of Deep Search"
 readme = "README.md"
-requires-python = ">=3.13"
+requires-python = ">=3.12"
 license = {text = "MIT"}
 authors = [
     {name = "Eric Ding", email = "eric.ding25@imperial.ac.uk"}
 ]
-keywords = ["langgraph", "search", "ai", "llm"]
-classifiers = [
-    "Development Status :: 3 - Alpha",
-    "Intended Audience :: Developers",
-    "License :: OSI Approved :: MIT License",
-    "Programming Language :: Python :: 3",
-    "Programming Language :: Python :: 3.13",
-]
+keywords = ["langgraph", "search", "ai", "llm", "deep search"]
 
 dependencies = [
     "langgraph>=0.0.40",
