--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,7 +25,8 @@ dependencies = [
     "crawl4ai>=0.2.0",
     "jina>=3.0.0",
     "gradio>=4.0.0",
-    "langchain_tavily>=0.1.0"
+    "langchain_tavily>=0.1.0",
+    "langgraph-cli[inmem]"
 ]
 
 [project.optional-dependencies]
