--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ langgraph>=0.0.40
 langchain>=0.1.0
 langchain-openai>=0.0.5
 langchain-community>=0.0.20
+langgraph-cli[inmem]
 
 # Data validation
 pydantic>=2.0.0
