Add support for cli

--- a/.env.example
+++ b/.env.example
@@ -45,5 +45,7 @@ JINA_API_KEY=your_jina_api_key_here
 INFINITY_API_URL=http://localhost:7997
 
 # Development
+# DEBUG: Set to true to enable debug logging (shows all logger.debug() messages)
+# LOG_LEVEL: Logging level when DEBUG=false (DEBUG, INFO, WARNING, ERROR, CRITICAL)
 DEBUG=false
 LOG_LEVEL=INFO
