--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,13 @@ dependencies = [
     "langgraph-cli[inmem]"
 ]
 
+[project.scripts]
+deepsearch = "src.cli:main"
+
+[tool.setuptools.packages.find]
+where = ["."]
+include = ["src*"]
+
 [project.optional-dependencies]
 dev = [
     "pytest>=7.0.0",
