--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,13 +28,13 @@ jobs:
         pip install -r requirements.txt
 
     - name: Run Ruff linter
-      run: ruff check . --output-format=github
+      run: ruff check . --output-format=github --exclude '*.ipynb'
 
     - name: Run Ruff formatter check
-      run: ruff format --check .
+      run: ruff format --check . --exclude '*.ipynb'
 
     - name: Run mypy type checker
-      run: mypy src --ignore-missing-imports
+      run: mypy src --ignore-missing-imports --exclude '\.ipynb$'
       continue-on-error: true
 
   test:
