--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,3 +48,9 @@ dev = [
 Homepage = "https://github.com/EricKing22/LangGraph_DeepSearch"
 Documentation = "https://github.com/EricKing22/LangGraph_DeepSearch#readme"
 Repository = "https://github.com/EricKing22/LangGraph_DeepSearch.git"
+
+[tool.pytest.ini_options]
+pythonpath = ["src"]
+testpaths = ["tests"]
+asyncio_mode = "auto"
+asyncio_default_fixture_loop_scope = "function"
