--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,16 +17,15 @@ keywords = ["langgraph", "search", "ai", "llm", "deep search"]
 dependencies = [
     "langgraph>=0.0.40",
     "langchain>=0.1.0",
+    "langchain-core>=0.1.0",
     "langchain-openai>=0.0.5",
+    "langchain-ollama>=0.1.0",
+    "langchain-community>=0.0.20",
+    "langchain-tavily>=0.1.0",
+    "langgraph-cli[inmem]",
     "pydantic>=2.0.0",
+    "pydantic-settings>=2.0.0",
     "python-dotenv>=1.0.0",
-    "httpx>=0.25.0",
-    "beautifulsoup4>=4.12.0",
-    "crawl4ai>=0.2.0",
-    "jina>=3.0.0",
-    "gradio>=4.0.0",
-    "langchain_tavily>=0.1.0",
-    "langgraph-cli[inmem]"
 ]
 
 [project.scripts]
@@ -40,8 +39,10 @@ include = ["src*"]
 dev = [
     "pytest>=7.0.0",
     "pytest-asyncio>=0.21.0",
+    "pytest-cov>=4.0.0",
     "ruff>=0.1.0",
     "mypy>=1.0.0",
+    "pre-commit>=3.0.0",
 ]
 
 [project.urls]
