--- a/.env.example
+++ b/.env.example
@@ -49,3 +49,6 @@ INFINITY_API_URL=http://localhost:7997
 # LOG_LEVEL: Logging level when DEBUG=false (DEBUG, INFO, WARNING, ERROR, CRITICAL)
 DEBUG=false
 LOG_LEVEL=INFO
+
+QUESTION_MODEL=pick_your_question_model
+REPORT_MODEL=pick_your_report_model
