--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,7 +22,7 @@ dependencies = [
     "langchain-ollama>=0.1.0",
     "langchain-community>=0.0.20",
     "langchain-tavily>=0.1.0",
-    "langgraph-cli[inmem]",
+    "langgraph-cli[inmem]>=0.4.12",
     "pydantic>=2.0.0",
     "pydantic-settings>=2.0.0",
     "python-dotenv>=1.0.0",
