--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ langchain-openai>=0.0.5
 langchain-ollama>=0.1.0
 langchain-community>=0.0.20
 langchain-tavily>=0.1.0
-langgraph-cli[inmem]>=0.4.0>=0.4.12
+langgraph-cli[inmem]>=0.4.12
 
 # Data validation
 pydantic>=2.0.0
